# paco

./: Bericht.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: damenproblem.yml  runner.yml
src/: Results.md  detection.rs  lib.rs  main.rs  video.rs
src/performance/: analyze.rs  mesure.rs  mod.rs
src/util/: board.rs  mod.rs  ui.rs
