[package]
name = "tracking"
version = "0.1.0"
authors = ["Johannes.Waidner@htwg-konstanz.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.59.0"
clap = "3.0.0-beta.5"
lazy_static = "1.4.0"
rayon = "1.5.1"
